# rsvp-term

./: .gitignore  Cargo.toml  README.md  justfile  test.md
.claude/: settings.local.json
assets/: alice-chapter2.md  demo-sample.md  demo.tape
docs/plans/: 2026-01-02-rsvp-term-design.md  2026-01-02-rsvp-term-implementation.md  2026-01-03-code-review-fixes.md  2026-01-03-epub-support-design.md
src/: app.rs  lib.rs  main.rs  orp.rs  timing.rs  types.rs
src/parser/: epub.rs  markdown.rs  mod.rs  traits.rs
src/ui/: common.rs  context.rs  help.rs  mod.rs  outline.rs  rsvp.rs  status.rs
tests/: app_test.rs  centering_test.rs  cli_test.rs  context_test.rs  integration_test.rs  orp_test.rs  parser_test.rs  perf_test.rs  timing_test.rs  types_test.rs  version_test.rs
tests/fixtures/: .gitignore  simple.md
tests/snapshots/: centering_test__centering_scenarios.snap  centering_test__narrow_terminal_centering.snap  centering_test__visual_centering_examples.snap  context_test__large_term_pos0.snap  context_test__large_term_pos20.snap  context_test__large_term_pos40.snap  context_test__large_term_pos60.snap  parser_test__snapshot_list.snap  parser_test__snapshot_quote.snap  parser_test__snapshot_simple_doc-2.snap  parser_test__snapshot_simple_doc.snap
thoughts/: backlog.md
