[package]
name = "rsvp-term"
version = "0.2.1"
edition = "2021"
description = "TUI for RSVP reading of markdown prose"
license = "MIT"
repository = "https://github.com/Mootikins/rsvp-term"
homepage = "https://github.com/Mootikins/rsvp-term"
keywords = ["rsvp", "reading", "tui", "markdown", "speed-reading"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
markdown-it = "0.6"
clap = { version = "4.5", features = ["derive"] }
epub = "2.1"
html2text = "0.16"

[dev-dependencies]
insta = "1.46"
